--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1820,7 +1820,7 @@ Multimedia API</a>. </big>
         2.7 – Primitive subsystem was removed.<br>
       </big></span><span><big> 2.7.1 – 2.7.6 – Preview release of next branch.<br>
         2.7.7 – Public release of next branch.<br>
-        2.7.8 – Small changes.<br>
+        2.7.8 – 2.7.9 – Small changes.<br>
       </big></span>
   </body>
 </html>
