Keyboard subsystem was improved

--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -250,7 +250,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
     <big><br>
       <span style="text-decoration: underline;">Supported compilers</span><br>
       <br>
-      This engine was successfully tested with these compilers: </big>
+      This engine was successfully tested with these compilers: </big> <br>
     <ul>
       <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM-GCC</big></a></li>
       <li><a href="http://mingw-w64.org"><big>MINGW-w64</big></a></li>
@@ -262,6 +262,23 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <li><big>Visual C++ 2017</big></li>
       <li><big>Visual C++ 2019</big></li>
       <li><big>Visual C++ 2022</big></li>
+      <li><big>C++ Builder 2010</big></li>
+      <li><big>C++ Builder XE</big></li>
+      <li><big>C++ Builder XE2</big></li>
+      <li><big>C++ Builder XE3</big></li>
+      <li><big>C++ Builder XE4</big></li>
+      <li><big>C++ Builder XE5</big></li>
+      <li><big>C++ Builder XE6</big></li>
+      <li><big>C++ Builder XE7</big></li>
+      <li><big>C++ Builder XE8</big></li>
+      <li><big>C++ Builder 10 Seattle</big></li>
+      <li><big>C++ Builder 10.1 Berlin</big></li>
+      <li><big>C++ Builder 10.2 Tokyo</big></li>
+      <li><big>C++ Builder 10.3 Rio</big></li>
+      <li><big>C++ Builder 10.4 Sydney</big></li>
+      <li><big>C++ Builder 11 Alexandria</big></li>
+    </ul>
+    <ul>
     </ul>
     <big><span style="text-decoration: underline;"></span> <span style="text-decoration: underline;">Windows
         XP support</span><br>
@@ -997,6 +1014,8 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">bool Keyboard::check_release(const
         unsigned char code);</span> – Return true if key with specific scan-code
       is released.<br>
+      <span style="font-style: italic;">bool Keyboard::is_ready() const;</span>&nbsp;
+      – Return true if the subsystem is already initialized.<br>
       <br>
       <span style="text-decoration: underline;">List of supported scan-codes</span><br>
     </big>
@@ -1834,6 +1853,8 @@ Multimedia API</a>. </big>
         2.8.7 – Small bug was fixed.<br>
         2.8.8 – 2.9.9 – Small changes.<br>
         3.0 – Base graphics subsystem was improved.<br>
+        3.0.1 – Small changes.<br>
+        3.0.2 – Keyboard subsystem was improved.<br>
       </big></span>
   </body>
 </html>
