--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1623,9 +1623,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">Display</span> implement display
       manager.<br>
     </big> <big> <span style="font-style: italic;">WINGL</span> contain
-      Windows specific OPENGL initialization code.<br>
-    </big><big><span style="font-style: italic;">COM_Base</span> is base class
-      for <span style="font-style: italic;">Multimedia</span> class.</big><br>
+      Windows specific OPENGL initialization code.</big><big><span style="font-style: italic;"></span></big><br>
     <big><br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Core classes</span><br>
       <br>
@@ -1703,6 +1701,7 @@ Multimedia API</a>. </big>
           predefined constants. You can see it bellow.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
+
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -1855,6 +1854,7 @@ Multimedia API</a>. </big>
         3.0 – Base graphics subsystem was improved.<br>
         3.0.1 – Small changes.<br>
         3.0.2 – Keyboard subsystem was improved.<br>
+        3.0.3 – 3.0.5 – Small changes.<br>
       </big></span>
   </body>
 </html>
