--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -121,7 +121,7 @@
     <big><br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Installation</span><br>
       <br>
-      How you can install this engine? Follow this steps:<br>
+      How you can install this engine? Follow these steps:<br>
       <br>
       Copy these files to you project directory: </big>
     <ul>
@@ -250,7 +250,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
     <big><br>
       <span style="text-decoration: underline;">Supported compilers</span><br>
       <br>
-      This engine was successfully tested with these compilers: </big> <br>
+      This engine successfully tested with these compilers: </big> <br>
     <ul>
       <li><a href="https://jmeubank.github.io/tdm-gcc/"><big>TDM-GCC</big></a></li>
       <li><a href="http://mingw-w64.org"><big>MINGW-w64</big></a></li>
@@ -365,7 +365,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="text-decoration: underline;">Render performance</span><br>
       <br>
       Always use latest video-card drivers. It can increase render performance.
-      Also you can try to change screen resolution if you have low render
+      Also, you can try to change screen resolution if you have low render
       performance.<br>
       <br>
       <span style="text-decoration: underline;">Fps limitation</span><br>
@@ -464,9 +464,9 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
     <big> <br>
       <span style="text-decoration: underline;">Level decoration</span><br>
       <br>
-      Background is a big image. It like decoration in theater stage. Any game
-      has a background. The background will stretch to screen resolution before
-      rendering game scene.<br>
+      Background is a big image. It is like decoration in theater stage. Any
+      game has a background. The background will stretch to screen resolution
+      before rendering game scene.<br>
       <br>
       There are two kind of background: normal background and scrolling
       background. The scrolling background is a big image with few frames.
@@ -552,7 +552,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
     <big> <br>
       <span style="text-decoration: underline;">Small important thing</span><br>
       <br>
-      A sprite is a transparent image. It useful for many things: enemies,
+      A sprite is a transparent image. It is useful for many things: enemies,
       bonuses, etc…<br>
       <br>
       <span style="text-decoration: underline;">Sprite types</span><br>
@@ -864,7 +864,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <br>
       <span style="text-decoration: underline;">Important remark</span><br>
       <br>
-      All methods return false if operation was failed.<br>
+      All methods return false if operation failed.<br>
       <span style="font-style: italic;"></span> </big>
     <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 4. Abnormal
         program termination</big></h2>
@@ -1863,6 +1863,7 @@ Multimedia API</a>. </big>
         3.0.6 – Operation system interaction subsystem improved.<br>
         3.0.7 – 3.1.1 – Small changes.<br>
         3.2 – 3.2.1 – A few changes in the engine API.<br>
+        3.2.2 – Small changes.<br>
       </big></span>
   </body>
 </html>
