--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -48,10 +48,11 @@
           <li><a href="#mozTocId597525">Chapter 1. The sub-namespace</a></li>
           <li><a href="#mozTocId236677">Chapter 2. Interaction with operation
               system</a></li>
-          <li><a href="#mozTocId688163">Chapter 3. Filesystem</a></li>
-          <li><a href="#mozTocId853711">Chapter 4. Abnormal program termination</a></li>
-          <li><a href="#mozTocId656377">Chapter 5. Timer</a></li>
-          <li><a href="#mozTocId381935">Chapter 6. Collision</a></li>
+          <li><a href="#mozTocId154445">Chapter 3. Random</a></li>
+          <li><a href="#mozTocId688163">Chapter 4. Filesystem</a></li>
+          <li><a href="#mozTocId853711">Chapter 5. Abnormal program termination</a></li>
+          <li><a href="#mozTocId656377">Chapter 6. Timer</a></li>
+          <li><a href="#mozTocId381935">Chapter 7. Collision</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId590919"> Part 5. Binary files</a>
@@ -834,10 +835,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
     <big><br>
       You may need interaction with operation system. Just use <span style="font-style: italic;">System</span>
       class for do it. Let’s look to public methods.<br>
-      <br>
-      <span style="font-style: italic;">unsigned int System::get_random(const
-        unsigned int number);</span> – Return a random number from zero to
-      number–1.<br>
+      <span style="font-style: italic;"></span><br>
       <span style="font-style: italic;">void System::quit();</span> – Exit from
       you program and return user to operation system.<br>
       <span style="font-style: italic;">void System::run(const char *command);</span>
@@ -850,8 +848,20 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       messages to a log file. Return false if the operation failed.<span style="font-style: italic;"></span><br>
       <br>
       This is all that you must know about this class. It is just very simple
-      class for few important things. </big>
-    <h2><a class="mozTocH2" name="mozTocId688163"></a><big>Chapter 3. Filesystem</big></h2>
+      class for few important things.<br>
+    </big>
+    <h2><a class="mozTocH2" name="mozTocId154445"></a><big>Chapter 3. Random</big></h2>
+    <big><br>
+      <span style="font-style: italic;">Random</span> class provide simple
+      access to random number generator. Let’s look to public methods.<br>
+      <br>
+      <span style="font-style: italic;">void Random::set_seed(const unsigned int
+        seed);</span> – Set random generator seed.<br>
+      <span style="font-style: italic;">unsigned int Random::get_random(const
+        unsigned int number);</span> – Return a random value between zero and
+      number.<br>
+    </big>
+    <h2><a class="mozTocH2" name="mozTocId688163"></a><big>Chapter 4. Filesystem</big></h2>
     <big><br>
       Filesystem subsystem let you doing some file operation. <span style="font-style: italic;">Filesystem</span>
       class provide simple access to this subsystem. Let’s look to public
@@ -866,7 +876,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <br>
       All methods return false if operation failed.<br>
       <span style="font-style: italic;"></span> </big>
-    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 4. Abnormal
+    <h2><a class="mozTocH2" name="mozTocId853711"></a><big>Chapter 5. Abnormal
         program termination</big></h2>
     <big><br>
       You can use Halt function for terminate program. This function declared in
@@ -875,7 +885,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">void EUGENEGDK::Halt(const char
         *message);</span> – Terminate the program. Write error message to log
       file if logging enabled. </big><big> </big>
-    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 5. Timer</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId656377"></a><big>Chapter 6. Timer</big></h2>
     <big><br>
       Timer is very useful thing. Just use <span style="font-style: italic;">Timer</span>
       class for work with the timer. Let’s look to public methods.<br>
@@ -887,7 +897,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       interval between stop and start points large or equal than specific
       seconds. </big> <br>
     <big></big><br>
-    <h2><a class="mozTocH2" name="mozTocId381935"></a><big>Chapter 6. Collision</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId381935"></a><big>Chapter 7. Collision</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Very important thing for any
         game</span><br>
@@ -1864,6 +1874,8 @@ Multimedia API</a>. </big>
         3.0.7 – 3.1.1 – Small changes.<br>
         3.2 – 3.2.1 – A few changes in the engine API.<br>
         3.2.2 – Small changes.<br>
+        3.3 – New subsystem added.<br>
+        3.3.1 – 3.3.2 – Small changes.<br>
       </big></span>
   </body>
 </html>
