--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1876,6 +1876,7 @@ Multimedia API</a>. </big>
         3.2.2 – Small changes.<br>
         3.3 – New subsystem added.<br>
         3.3.1 – 3.3.4 – Small changes.<br>
+        3.3.5 – Keyboard input improved.<br>
       </big></span>
   </body>
 </html>
