--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -812,10 +812,11 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <br>
       <span style="text-decoration: underline;">Important remark</span><br>
       <br>
-      New image replace current image if current image already exist.<br>
+      New image replace current image if current image already exist. Incorrect
+      images will ignore and don't load.<br>
       <br>
-      <span style="text-decoration: underline;">Supported format</span><br>
-    </big>
+      <span style="text-decoration: underline;">Supported format<br>
+      </span> </big>
     <p><big> All loading images must have correct specification. You can load an
         images from 32 bit </big><big><a href="https://en.wikipedia.org/wiki/Truevision_TGA">Truevision
           TGA</a> pictures. </big></p>
@@ -823,7 +824,8 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <br>
       You can use wide range of graphics software for convert you images to
       correct format. I recommend use <a href="https://www.gimp.org">GIMP</a>
-      for do it. It is powerful open source and cross-platform image editor. </big>
+      for do it. It is powerful open source and cross-platform image editor.<br>
+    </big>
     <h1><a class="mozTocH1" name="mozTocId64443"></a><big>Part 4. Common things</big></h1>
     <h2><a class="mozTocH2" name="mozTocId597525"></a><big>Chapter 1. The
         sub-namespace</big></h2>
@@ -1023,14 +1025,14 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="font-style: italic;">void Keyboard::initialize();</span> –
       Initialize the subsystem.<br>
       <span style="font-style: italic;">bool Keyboard::check_hold(const unsigned
-        char code);</span> – Return true if key with specific scan-code is
-      pressed or holding.<br>
+        char code);</span> – Return true if key with specific scan-code is press
+      or holding.<br>
       <span style="font-style: italic;">bool Keyboard::check_press(const
         unsigned char code);</span> – Return true if key with specific scan-code
-      is pressed.<br>
+      was press.<br>
       <span style="font-style: italic;">bool Keyboard::check_release(const
         unsigned char code);</span> – Return true if key with specific scan-code
-      is released.<br>
+      wa release.<br>
       <span style="font-style: italic;">bool Keyboard::is_ready() const;</span>&nbsp;
       – Return true if the subsystem is already initialized.<br>
       <br>
@@ -1312,13 +1314,13 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
         int x,const unsigned int y);</span> – Set position of mouse.<br>
       <span style="font-style: italic;">bool Mouse::check_hold(const
         EUGENEGDK::MOUSE_BUTTON button);</span> – Return true if specific mouse
-      button is pressed or holding.<br>
+      button is press or holding.<br>
       <span style="font-style: italic;">bool Mouse::check_press(const
         EUGENEGDK::MOUSE_BUTTON button);</span> – Return true if specific mouse
-      button is pressed.<br>
+      button was press.<br>
       <span style="font-style: italic;">bool Mouse::check_release(const
         EUGENEGDK::MOUSE_BUTTON button);</span> – Return true if specific mouse
-      button is released.<br>
+      button was release.<br>
       <br>
       <span style="text-decoration: underline;">Mouse buttons</span><br>
     </big>
@@ -1358,7 +1360,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="text-decoration: underline;">Amount of connect game-pads</span><br>
       <br>
       You can connect a few game-pads. Any connected game-pad have an internal
-      index. First game-pad is 0. First game-pad will active by default at
+      index. First game-pad is 0. First game-pad will activate by default at
       program start.<br>
       <br>
       <span style="text-decoration: underline;">Ordinary buttons codes</span><br>
@@ -1501,13 +1503,13 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       holding D-pad button.<br>
       <span style="font-style: italic;">bool Gamepad::check_hold(const
         EUGENEGDK::GAMEPAD_BUTTONS button);</span> – Return true if the button
-      is pressed or holding.<br>
+      is press or holding.<br>
       <span style="font-style: italic;">bool Gamepad::check_press(const
         EUGENEGDK::GAMEPAD_BUTTONS button);</span> – Return true if the button
-      is pressed.<br>
+      was press.<br>
       <span style="font-style: italic;">bool Gamepad::check_released(const
         EUGENEGDK::GAMEPAD_BUTTONS button);</span> – Return true if the button
-      is released.<br>
+      was release.<br>
       <span style="font-style: italic;">unsigned long int
         Gamepad::get_sticks_amount();</span> – Return amount of the game-pad
       sticks.<br>
@@ -1877,6 +1879,7 @@ Multimedia API</a>. </big>
         3.3 – New subsystem added.<br>
         3.3.1 – 3.3.4 – Small changes.<br>
         3.3.5 – Keyboard input improved.<br>
+        3.3.6 – Image loader improved.<br>
       </big></span>
   </body>
 </html>
