--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -818,7 +818,7 @@ C++ Redistributable Packages</a> if you game don’t run. </big>
       <span style="text-decoration: underline;">Supported format<br>
       </span> </big>
     <p><big> All loading images must have correct specification. You can load an
-        images from 32 bit </big><big><a href="https://en.wikipedia.org/wiki/Truevision_TGA">Truevision
+        image from 32 bit </big><big><a href="https://en.wikipedia.org/wiki/Truevision_TGA">Truevision
           TGA</a> pictures. </big></p>
     <big> <span style="text-decoration: underline;">Recommend software</span><br>
       <br>
@@ -1727,12 +1727,12 @@ Multimedia API</a>. </big>
           </tr>
           <tr>
             <td style="vertical-align: top;"><big>KEY_PRESSED </big></td>
-            <td style="vertical-align: top;"><big>A key\button is pressed or
+            <td style="vertical-align: top;"><big>A key\button is press or
                 holding </big></td>
           </tr>
           <tr>
             <td style="vertical-align: top;"><big>KEY_RELEASED </big></td>
-            <td style="vertical-align: top;"><big>A key\button is released </big></td>
+            <td style="vertical-align: top;"><big>A key\button was release </big></td>
           </tr>
         </tbody>
       </table>
@@ -1880,6 +1880,7 @@ Multimedia API</a>. </big>
         3.3.1 – 3.3.4 – Small changes.<br>
         3.3.5 – Keyboard input improved.<br>
         3.3.6 – Image loader improved.<br>
+        3.3.7 – 3.3.8 – Small changes.<br>
       </big></span>
   </body>
 </html>
